--- a/cap1.tex
+++ b/cap1.tex
@@ -69,7 +69,7 @@ Os jogos MOBA têm suas origens nos jogos do gênero RTS. Suas características 
 \subsection{Starcraft e o mapa Aeon of Strife}
 Um dos primeiros MOBAs de sucesso teve origem no jogo RTS da Blizzard, o Starcraft, criado em 1998. Ainda em 1998, um \textit{modder} conhecido como Aeon64 criou um mapa alternativo para o Starcraft, o Aeon of Strife. Nesse mapa, os jogadores controlavam um único herói cada e lutavam em uma equipe contra outra controlada por IA em três rotas do mapa. Essas rotas conectam as bases das duas equipes. O objetivo era destruir a base da outra equipe.
 
-Embora Aeon of Strife tenha estabelecido os fundamentos para o gênero MOBA, existiam algumas diferenças notáveis do que se espera de um MOBA atualmente. As equipes tinham quatro jogadores cada, em vez de cinco. Além disso, Aeon of Strife não era um jogo competitivo. Em vez disso, uma equipe de personagens controlados por jogadores combatiam contra uma equipe de personagens controladas por IA. Os personagens também não subiam de nível enquanto o jogo progredia, e não existia uma selva no mapa com monstros e trilhas extras entre as três rotas.
+Embora Aeon of Strife tenha estabelecido os fundamentos para o gênero MOBA, existiam algumas diferenças notáveis do que se espera de um MOBA atualmente. As equipes tinham quatro jogadores cada, em vez de cinco. Além disso, Aeon of Strife não era um jogo competitivo. Em vez disso, uma equipe de personagens controlados por jogadores combatia contra uma equipe de personagens controladas por IA. Os personagens também não subiam de nível enquanto o jogo progredia, e não existia uma selva no mapa com monstros e trilhas extras entre as três rotas.
 
 \subsection{Warcraft III e o mapa Defense of the Ancients}
 Em 2002, a Blizzard lançou outro jogo RTS que chamou a atenção da comunidade \textit{modder}: Warcraft III. Este jogo era essencialmente parecido com Starcraft, porém tinha raças diferentes, gráficos tridimensionais melhores, uma série de cenários novos e ambiente de personalização mais poderoso com suporte a uma linguagem de programação.
@@ -97,7 +97,7 @@ A mineração de dados é o estudo da coleta, preparação, processamento, anál
 
 Atualmente, devido aos avanços tecnológicos e da informatização de todos os aspectos da vida moderna, praticamente todos os sistemas automatizados geram ou armazenam alguma forma de dados. Isso resultou em um crescimento excessivamente rápido do volume de dados, atingindo a ordem de petabytes ou exabytes \cite{aggarwal2015data}.
 
-Esse crescimento excessivo do volume de dados vem emergindo em diversas áreas da indústria e pesquisa, como bioinformática, análise de redes sociais, visão computacional e jogos digitais \cite{el2016game}. Portanto, é natural examinar se é possível extrair informações concisas e, possivelmente, acionáveis a partir dos dados disponíveis de modo a apoiar a tomada de decisões estratégicas. Há uma grande quantidade de informações escondidas em dados brutos (telemétricos) de jogos digitais, por exemplo, mas nem tudo está prontamente disponível, e alguns são difíceis de se descobrir sem o conhecimento especializado (ou mesmo com ele) \cite{el2016game}. Isso fez com que dados telemétricos de muitos jogos fossem rastreados, registrados e armazenados, mas não analisados e aplicados. O desafio enfrentado pela indústria de jogos para tirar proveito dos dados reflete o desafio geral de trabalhar com dados em grande escala. Apenas recuperar informações de bancos de dados não é suficiente para apoiar a tomada de decisões. A revolução dos dados exigem métodos e algoritmos de análise que dimensionem tamanhos de dados massivos e permitam análises efetivas e rápidas, bem como resultados que são intuitivamente acessíveis para não especialistas.
+Esse crescimento excessivo do volume de dados vem emergindo em diversas áreas da indústria e pesquisa, como bioinformática, análise de redes sociais, visão computacional e jogos digitais \cite{el2016game}. Portanto, é natural examinar se é possível extrair informações concisas e, possivelmente, acionáveis a partir dos dados disponíveis de modo a apoiar a tomada de decisões estratégicas. Há uma grande quantidade de informações escondidas em dados brutos (telemétricos) de jogos digitais, por exemplo, mas nem tudo está prontamente disponível, e alguns são difíceis de se descobrir sem o conhecimento especializado (ou mesmo com ele) \cite{el2016game}. Isso fez com que dados telemétricos de muitos jogos fossem rastreados, registrados e armazenados, mas não analisados e aplicados. O desafio enfrentado pela indústria de jogos para tirar proveito dos dados reflete o desafio geral de trabalhar com dados em grande escala. Apenas recuperar informações de bancos de dados não é suficiente para apoiar a tomada de decisões. A revolução dos dados exige métodos e algoritmos de análise que dimensionem tamanhos de dados massivos e permitam análises efetivas e rápidas, bem como resultados que são intuitivamente acessíveis para não especialistas.
 
 Para resolver este problema, os analistas usam um processo de mineração de dados, onde os dados brutos são coletados e preparados em um formato padronizado. Em seguida, os dados padronizados podem ser armazenados e, finalmente, processados para extrair informações com o uso de algoritmos analíticos. Esse \textit{pipeline} de processamento é conceitualmente análogo ao de um processo de mineração real de um minério mineral para obter um produto final refinado.
 
@@ -114,7 +114,7 @@ Jogos digitais modernos variam desde aplicativos simples a sistemas de informaç
 
 A telemetria é um dos termos fundamentais da análise de jogos, descrevendo a coleta de dados à distância. A coleta, análise e geração de informações a partir de dados telemétricos de comportamento de usuários é a base para a análise atual no desenvolvimento de jogos.
 
-A coleta e o uso da telemetria tem uma história que remonta ao século XIX, onde os primeiros circuitos de transmissão de dados foram desenvolvidos, mas hoje o termo abrange qualquer tecnologia que permita a medição à distância. Exemplos comuns incluem transmissão de ondas de rádio a partir de um sensor remoto ou transmissão e recepção de informações através de uma rede IP.
+A coleta e o uso da telemetria têm uma história que remonta ao século XIX, onde os primeiros circuitos de transmissão de dados foram desenvolvidos, mas hoje o termo abrange qualquer tecnologia que permita a medição à distância. Exemplos comuns incluem transmissão de ondas de rádio a partir de um sensor remoto ou transmissão e recepção de informações através de uma rede IP.
 
 A telemetria de jogo é um termo da área de pesquisa e desenvolvimento de jogos que é usada para denotar qualquer fonte de dados obtida de uma certa distância. Existem muitos usos populares de telemetria em jogos, incluindo monitoramento remoto e análise de servidores, dispositivos móveis e comportamento de usuários. A fonte de telemetria mais importante no desenvolvimento de jogos atualmente é a telemetria do usuário, ou seja, dados sobre o comportamento dos usuários (jogadores), por exemplo, na interação com jogos, comportamento de compra, movimento físico ou interação com outros usuários ou aplicações.
 
@@ -124,7 +124,7 @@ Os dados que estão sendo transmitidos seguem diferentes convenções de nomencl
 
 Para que se trabalhe com dados telemétricos, os dados de atributos precisam ser operacionalizados, o que significa ter que decidir uma maneira de expressar esses dados. Um exemplo seria decidir se os dados de registros de localização dos personagens (ou usuários de celular) podem ser estruturados como um número que representa a soma do deslocamento em metros. A operacionalização dos dados de atributos dessa forma os transforma em variáveis ou características. O termo varia de acordo com o campo científico, no entanto, o termo característica é frequentemente usado na mineração de dados.
 
-Dados brutos telemétricos podem ser armazenados em vários formatos de base de dados e estruturados de forma a tornar possível a transformação dos dados em várias medidas interpretativas, como tempo médio de duração de jogo, receita por dia, número de usuários ativos por dia, e assim por diante. Essas medidas são chamadas de métricas de jogo. As métricas de jogo são, em essência, medidas interpretativas de algo e podem apresentar vantagens potenciais, como suporte à tomada de decisões estratégicas. Métricas podem ser características e vice-versa, ou agregados mais complexos ou valores calculados como a soma de múltiplas características. Para exemplificar: dados telemétricos de um atirador em um jogo de tiro podem incluir dados sobre a localização do personagem do jogador no ambiente virtual, as armas usadas e informações sobre se cada tiro atinge ou erra um alvo, dentre outros. Esses dados de atributos podem ser convertidos em características básicas, como número de acertos ou número de erros em um domínio de 0:1000, sendo 1000 o maior número de acertos efetuados em um mapa específico. Por sua vez, essas características básicas podem ser usadas para realizar uma análise simples, como o cálculo da taxa de acerto/erro em cada mapa do jogo. Uma alternativa é usar características como identificação do jogador, duração da partida e pontos marcados para calcular a métrica pontos marcados por minuto para cada jogador.
+Dados brutos telemétricos podem ser armazenados em vários formatos de base de dados e estruturados de forma a tornar possível a transformação dos dados em várias medidas interpretativas, como tempo médio de duração de jogo, receita por dia, número de usuários ativos por dia, e assim por diante. Essas medidas são chamadas de métricas de jogo. As métricas de jogo são, em essência, medidas interpretativas de algo e podem apresentar vantagens potenciais, como suporte à tomada de decisões estratégicas. Métricas podem ser características e vice-versa, ou agregados mais complexos ou valores calculados como a soma de múltiplas características. Para exemplificar: dados telemétricos de um atirador em um jogo de tiro podem incluir dados sobre a localização do personagem do jogador no ambiente virtual, as armas usadas e informações sobre se cada tiro atinge ou erra um alvo, dentre outros. Esses dados de atributos podem ser convertidos em características básicas, como número de acertos ou número de erros em um domínio de 0:1000, sendo 1000 o maior número de acertos efetuados em um mapa específico. Por sua vez, essas características básicas podem ser usadas para realizar uma análise simples, como o cálculo da taxa de acerto/erro em cada mapa do jogo. Uma alternativa é usar características como identificação do jogador, duração da partida e pontos marcados para calcular a métrica de pontos marcados por minuto para cada jogador.
 
 \subsection{Processo de Mineração de Dados}
 Em 1996, foi desenvolvido um padrão interindústria que adotou uma abordagem neutra em termos de indústria, aplicação e ferramenta para mineração de dados, definindo como Processo Padrão Interindústria para Mineração de Dados (\textit{Cross-Industry Standard Process for Data Mining} - CRISP-DM) \footnote{www.crisp-dm.org} \cite{chapman2000crisp}. O CRISP-DM representa uma abordagem fundamental para os processos de mineração de dados, e diversas variantes especializadas existem voltadas para indústrias ou problemas específicos. Embora possa parecer complicado aplicar o processo CRISP-DM completo para cada uma das questões que queremos responder usando telemetria de jogos, na prática, algumas fases podem ser muito rápidas de se passar, especialmente se a análise já foi realizada em um conjunto de dados de comportamento de usuários anterior. O CRISP-DM fornece um processo padrão não proprietário e livre disponível para adaptar a mineração de dados na estratégia geral de resolução de problemas de uma organização ou pesquisa. É um processo iterativo e sua sequência de fases é adaptativa, ou seja, a próxima fase, em uma sequência de seis fases definidas, depende da associação de resultados da fase anterior. Por exemplo, pode ser necessário retornar à fase de preparação de dados para refinar os dados antes de avançar para a fase de modelagem - é uma situação típica em que a solução para uma questão leva a mais questões ou quando se trabalha com comportamento de jogadores \cite{el2016game}.
@@ -165,7 +165,7 @@ A fase de preparação de dados é um processo de vários estágios que \fj{comp
   \item
 \textbf{Extração de Características}: Dados brutos geralmente estão em uma forma que não é adequada para o processamento. Os exemplos incluem \textit{logs} brutos, documentos, dados semiestruturados e possivelmente outras formas de dados heterogêneos. Nesses casos, pode ser desejável obter características significativas a partir dos dados. Geralmente, as características com boa interpretação semântica são mais desejáveis porque simplificam a capacidade do analista de entender os resultados intermediários e geralmente têm melhor ligação aos objetivos da aplicação de mineração de dados. Em alguns casos onde os dados são obtidos de múltiplas fontes, os dados precisam ser integrados em uma única base de dados para serem processados. Além disso, alguns algoritmos podem funcionar apenas com um tipo de dados específico, sendo que os dados podem conter tipos heterogêneos. Nesses casos, a portabilidade dos tipos de dados se torna importante quando os atributos de um tipo são transformados em outro. Isso resulta em um conjunto de dados mais homogêneo que pode ser processado pelos algoritmos existentes.
   \item
-\textbf{Limpeza de dados:} Na fase de limpeza de dados, os itens faltantes, errados e inconsistentes são removidas dos dados. Alguns itens faltantes também podem ser estimadas para serem inseridos nos dados.
+\textbf{Limpeza de dados:} Na fase de limpeza de dados, os itens faltantes, errados e inconsistentes são removidas dos dados. Alguns itens faltantes também podem ser estimados para serem inseridos nos dados.
   \item
 \textbf{Redução e transformação de dados}: Nessa fase, o tamanho dos dados é reduzido através da seleção de subconjuntos de dados, seleção de subconjuntos de características ou transformação de dados. Os ganhos obtidos nesta fase são duplos. Primeiro, quando o tamanho dos dados é reduzido, os algoritmos geralmente são mais eficientes. Em segundo lugar, se características irrelevantes ou itens irrelevantes são removidos, a qualidade do processo de mineração de dados é melhorada. O primeiro objetivo pode ser alcançado por técnicas genéricas de amostragem ou redução de dimensionalidade. Para alcançar o segundo objetivo, uma abordagem altamente específica do problema em questão deve ser usada para seleção de características. Por exemplo, uma abordagem de seleção de características que funciona bem para agrupamento pode não funcionar bem para classificação.
 \end{itemize}
@@ -217,7 +217,7 @@ Em geral, tarefas de mineração de dados podem ser classificadas em duas catego
 
 Portanto, o modelo descritivo encontra padrões ou relacionamentos em dados e explora as propriedades dos dados examinados. Agrupamento, sumarização e análise de associação são exemplos de modelos descritivos. O agrupamento é semelhante à classificação, exceto que os grupos não estão predefinidos, mas são definidos apenas pelos dados. É um método de aprendizado não supervisionado. Corresponde a partição ou segmentação dos dados em grupos distintos de tuplas ou itens similares. Os grupos são caracterizados pelo estudo do comportamento dos dados por especialistas do domínio. O termo segmentação é usado em um contexto muito específico. A sumarização é a técnica de apresentar a informação resumida dos dados. A regra de associação encontra a associação entre os diferentes atributos. A mineração de regras de associação é um processo de dois passos: encontrar todos os conjuntos de itens frequentes, gerando regras de associação fortes a partir dos conjuntos de itens frequentes. A descoberta de sequência é um processo de encontrar os padrões de sequência nos dados. Esta sequência pode ser usada para entender uma tendência.
 
-O modelo preditivo faz previsões sobre valores de dados desconhecidos usando valores conhecidos. Classificação, previsão e regressão são exemplos de modelos preditivos. Muitas das aplicações de mineração de dados visam prever o estado futuro dos dados. Previsão é o processo de análise dos estados atuais e passados do atributo e previsão de seu futuro estado. A classificação é uma técnica de mapeamento dos dados de destino para grupos ou classes predefinidos, isso é um aprendizado supervisionado porque as classes são predefinidas antes dos dos dados de destino serem examinados. A regressão envolve o aprendizado de uma função que mapeia o item de dados para uma variável numérica de previsão de valor real.
+O modelo preditivo faz previsões sobre valores de dados desconhecidos usando valores conhecidos. Classificação, previsão e regressão são exemplos de modelos preditivos. Muitas das aplicações de mineração de dados visam prever o estado futuro dos dados. Previsão é o processo de análise dos estados atuais e passados do atributo e previsão de seu futuro estado. A classificação é uma técnica de mapeamento dos dados de destino para grupos ou classes predefinidos, isso é um aprendizado supervisionado porque as classes são predefinidas antes dos dados de destino serem examinados. A regressão envolve o aprendizado de uma função que mapeia o item de dados para uma variável numérica de previsão de valor real.
 
 Uma aplicação de mineração de dados pode realizar uma ou mais das seguintes tarefas de mineração de dados:
 
@@ -309,7 +309,7 @@ Descrições das 38 estatísticas básicas de desempenho dos jogadores nas parti
 
 \textbf{largestKillingSpree} - A maior quantidade de \textit{killing sprees} do campeão.
 
-\textbf{largestCriticalStrike} - O maior ataque critico que o campeão efetuou. Um ataque crítico é um ataque básico ou uma habilidade que causa duas vezes o seu dano normal.
+\textbf{largestCriticalStrike} - O maior ataque crítico que o campeão efetuou. Um ataque crítico é um ataque básico ou uma habilidade que causa duas vezes o seu dano normal.
 
 \textbf{physicalDamageDealt} - O dano físico total causado na partida. O dano físico é um dos tipos de dano na League of Legends. O dano físico é causado por todos os ataques básicos, por algumas habilidades de campeão e por alguns efeitos de itens. O dano físico total causado na partida corresponde a soma do dano físico total causado aos campeões inimigos e o dano físico total causado aos \textit{minions} inimigos e monstros neutros.
 
@@ -347,11 +347,11 @@ Descrições das 38 estatísticas básicas de desempenho dos jogadores nas parti
 
 \textbf{visionWardsBoughtInGame} - Quantidade de sentinelas detectoras que o campeão comprou durante a partida. Ao contrário do item sentinela de visão, o item sentinela detectora permite que o campeão e sua equipe veja campeões inimigos e objetos invisíveis no mapa.
 
-\textbf{wardsKilled} - A quantidade de sentinelas inimigas que foram destruidas na partida.
+\textbf{wardsKilled} - A quantidade de sentinelas inimigas que foram destruídas na partida.
 
 \textbf{wardsPlaced} - A quantidade de sentinelas de visão e detectoras que foram implantadas no mapa.
 
-\textbf{totalHeal} - A quantidade de cura total efetuada aos campeões e \textit{minions} aliados. Curar é um feitiço que instantaneamente restaura certa nível de saúde do campeão e aliados próximos, além de conceder um bônus de velocidade de movimento temporário.
+\textbf{totalHeal} - A quantidade de cura total efetuada aos campeões e \textit{minions} aliados. Curar é um feitiço que instantaneamente restaura certo nível de saúde do campeão e aliados próximos, além de conceder um bônus de velocidade de movimento temporário.
 
 \textbf{totalUnitsHealed} - A quantidade de vezes que o campeão curou a saúde dos \textit{minions} e campeões aliados.
 
@@ -470,7 +470,7 @@ wardsPlaced&                         7&     621&     62.39&     60.0&         44
 
 \section{\fj{Detec\c{c}\~ao}{Remo\c{c}\~ao} de \textit{Outliers}}
 
-A fim de encontrar padrões, adotamos o \textit{K-means clustering} para agrupar equipes similares conforme o desempenho das equipes nas partidas que foram coletadas (mais sobre o agrupamento no Capítulo ~\ref{cap:perfiscomportamento}). No entanto, o \textit{K-means clustering} é muito sensível a dados discrepantes (\textit{outliers}) \cite{gan2017k}, pois como o nome sugere, seu algoritmo é baseado no cálculo das médias entre os grupos para encontrar o grupo mais adequado para cada observação do conjunto de dados. Portanto, antes que fizessemos o agrupamento dos dados, criamos gráficos \textit{boxplots} a partir das características dos dados para analisar se existiam ou não \textit{outliers} nos dados.
+A fim de encontrar padrões, adotamos o \textit{K-means clustering} para agrupar equipes similares conforme o desempenho das equipes nas partidas que foram coletadas (mais sobre o agrupamento no Capítulo ~\ref{cap:perfiscomportamento}). No entanto, o \textit{K-means clustering} é muito sensível a dados discrepantes (\textit{outliers}) \cite{gan2017k}, pois como o nome sugere, seu algoritmo é baseado no cálculo das médias entre os grupos para encontrar o grupo mais adequado para cada observação do conjunto de dados. Portanto, antes que fizéssemos o agrupamento dos dados, criamos gráficos \textit{boxplots} a partir das características dos dados para analisar se existiam ou não \textit{outliers} nos dados.
 
 % TODO Because the mean, as a statistic, is generally sensitive to outliers.
 % http://www.math.uconn.edu/~gan/ggpaper/gan2017kmor.pdf
@@ -478,7 +478,7 @@ A fim de encontrar padrões, adotamos o \textit{K-means clustering} para agrupar
 % https://www.quora.com/How-are-k-means-clustering-algorithms-sensitive-to-outliers
 % https://www.researchgate.net/post/Which_is_the_best_method_for_removing_outliers_in_a_data_set
 
-A Figura ~\ref{fig:boxplots} ilustra os gráficos dos \textit{boxplots} das caracter\'isticas do conjunto de desempenho das equipes. Como podemos observar, existe uma quantidade muito considerável de \textit{outliers} nos dados. Desse modo, como não temos idéia da causa desse comportamento, decidimos remover apenas equipes consideradas \textit{outliers} extremos, isto é, removemos aquelas equipes com algum \textit{outlier} em suas caracter\'isticas com base em um Intervalo Interquartil do Boxplot $IQR = 3,5$.
+A Figura ~\ref{fig:boxplots} ilustra os gráficos dos \textit{boxplots} das caracter\'isticas do conjunto de desempenho das equipes. Como podemos observar, existe uma quantidade muito considerável de \textit{outliers} nos dados. Desse modo, como não temos ideia da causa desse comportamento, decidimos remover apenas equipes consideradas \textit{outliers} extremos, isto é, removemos aquelas equipes com algum \textit{outlier} em suas caracter\'isticas com base em um Intervalo Interquartil do Boxplot $IQR = 3,5$.
 
 Em seguida, realizamos uma \fj{an\'alise para remover caracter\'isticas com baixa vari\^ancia novamente}{estat\'istica descritiva dos dados novamente e percebemos que algumas caracter\'isticas estavam com vari\^ancia pr\'oxima de zero}. Após \fj{a}{essa} análise, as seguintes características \fj{}{com vari\^ancia pr\'oxima de zero} foram removidas: \textit{totalUnitsHelead} e \textit{visionWardsBoughtInGame}.
 
@@ -540,11 +540,11 @@ O problema de encontrar perfis de desempenho de equipes pode ser considerado equ
   \arg\min_{C} \sum_{i=1}^{k} \sum_{x_j \in c_i}{} || x_j - \mu _i ||^2; \arg\min_{C} \{SQE(C)\} = \arg\min_{C} \{SQED\}
 \end{displaymath}
 
-Onde $\mu_j$ é a média das observações em $c_i$, e indica também o \textit{i}-ésimo centróide de $C$.
+Onde $\mu_j$ é a média das observações em $c_i$, e indica também o \textit{i}-ésimo centroide de $C$.
 
 Conforme Zaki et al. \cite{zaki2014data}, o \textit{K-means} usa uma abordagem iterativa gananciosa (\textit{iterative greedy}) para encontrar um grupo que minimize a função objetivo $SQE$ e, como tal, pode convergir para um grupo ótimo local em vez de um grupo ótimo global.
 
-Em nosso conjunto de dados $X$ usamos o algoritmo de Lloyd \cite{ong2015player}, uma heurística que consiste em escolher aleatoriamente observações como centróides para os $k$ grupos de $C$ e atribuir iterativamente cada observação $x \in X$ ao centróide mais próximo e depois atualizar os centróides com a média de seus respectivos grupos.
+Em nosso conjunto de dados $X$ usamos o algoritmo de Lloyd \cite{ong2015player}, uma heurística que consiste em escolher aleatoriamente observações como centroides para os $k$ grupos de $C$ e atribuir iterativamente cada observação $x \in X$ ao centroide mais próximo e depois atualizar os centroides com a média de seus respectivos grupos.
 
 Para encontrar um número ótimo $k$ de grupos usamos um método que encontra o "cotovelo" ou "joelho" da curva de erro. Este método tenta descobrir um número apropriado de grupos analisando a curva de um gráfico gerado a partir de um teste realizado para cada número possível de grupos \cite{kodinariya2013review}. No nosso caso, o teste foi baseado na função objetivo $SQED$.
 
@@ -572,7 +572,7 @@ A fim de compreender como os grupos ou perfis encontrados diferem entre si, anal
 
 \begin{enumerate}[label=(\roman*)]
  \item A quantidade de equipes e a \fj{taxa de equipes vencedoras/perdedoras}{propor\c{c}\~ao de equipes vencedoras (taxa de vit\'orias) e a propor\c{c}\~ao de equipes perdedoras (taxa de derrotas)};
- \item Os centróides que sumarizam as características dos \fj{grupos}{perfis};
+ \item Os centroides que sumarizam as características dos \fj{grupos}{perfis};
  \item Em que medida as características têm influência ou relevância nos \fj{grupos}{perfis}.
 \end{enumerate}
 
@@ -597,12 +597,12 @@ A Figura ~\ref{fig:relevance} ilustra o mapa de calor do ganho de informação a
 \label{fig:relevance}
 \end{figure*}
 
-Seja $A$ a matriz de centróides das métricas de desempenho das equipes $M$ por perfil, onde cada linha $a \in A$ indica os centróides das métricas de um \fj{grupo}{perfil}, e cada coluna $A_j \in A$ indica os centróides das métricas entre os 7 perfis encontrados. A Tabela ~\ref{tab:centers} apresenta a matrix \textit{transposta} dos centróides $t(A)$ e a sumarização desses centróides entre os perfis de modo a  denotar como os perfis se diferem em termos de desempenho. Se multiplicarmos as métricas de desempenho $M$ pela duração média das partidas ($mean(M_{duration}) \approx 29$ minutos) podemos ter uma estimativa do desempenho total dos perfis no final de uma partida. Se compararmos as principais métricas de desempenho do pior perfil (Perfil 4) e do melhor perfil (Perfil 3) em relação a taxa de vitórias, podemos verificar que o melhor perfil tem um desempenho de \textit{deaths} ~40\% inferior, \textit{killingSprees} ~54\% superior e \textit{neutralMinionsKilledEnemyJungle} ~78\% superior. O nível elevado de $neutralMinionsKilledEnemyJungle$ pode indicar que o Perfil 3 possui um excelente domínio do campo da equipe inimiga e dos \textit{minions} que existem por lá, fazendo com que as equipes desse perfil tenham uma quantidade maior de ouro as custas dos recursos da equipe inimiga, e, assim, comprem melhores itens de defesa e ataque para garantir uma quantidade menor de \textit{deaths} e maior de \textit{killingSprees} por minuto, respectivamente.
+Seja $A$ a matriz de centroides das métricas de desempenho das equipes $M$ por perfil, onde cada linha $a \in A$ indica os centroides das métricas de um \fj{grupo}{perfil}, e cada coluna $A_j \in A$ indica os centroides das métricas entre os 7 perfis encontrados. A Tabela ~\ref{tab:centers} apresenta a matrix \textit{transposta} dos centroides $t(A)$ e a sumarização desses centroides entre os perfis de modo a  denotar como os perfis se diferem em termos de desempenho. Se multiplicarmos as métricas de desempenho $M$ pela duração média das partidas ($mean(M_{duration}) \approx 29$ minutos) podemos ter uma estimativa do desempenho total dos perfis no final de uma partida. Se compararmos as principais métricas de desempenho do pior perfil (Perfil 4) e do melhor perfil (Perfil 3) em relação a taxa de vitórias, podemos verificar que o melhor perfil tem um desempenho de \textit{deaths} ~40\% inferior, \textit{killingSprees} ~54\% superior e \textit{neutralMinionsKilledEnemyJungle} ~78\% superior. O nível elevado de $neutralMinionsKilledEnemyJungle$ pode indicar que o Perfil 3 possui um excelente domínio do campo da equipe inimiga e dos \textit{minions} que existem por lá, fazendo com que as equipes desse perfil tenham uma quantidade maior de ouro as custas dos recursos da equipe inimiga, e, assim, comprem melhores itens de defesa e ataque para garantir uma quantidade menor de \textit{deaths} e maior de \textit{killingSprees} por minuto, respectivamente.
 
 
 \begin{table*}
   \tiny
-  \caption{Centróides das características (métricas de desempenho) para cada um dos 7 perfis encontrados. As últimas 5 colunas da tabelas sumarizam as métricas de desempenho entre os perfis: valor mínimo (Min), média (Mean), variância (Var), desvio padrão (Sd), valor máximo (Max).}
+  \caption{Centroides das características (métricas de desempenho) para cada um dos 7 perfis encontrados. As últimas 5 colunas da tabela sumarizam as métricas de desempenho entre os perfis: valor mínimo (Min), média (Mean), variância (Var), desvio padrão (Sd), valor máximo (Max).}
   \label{tab:centers}
   \begin{tabular}{p{0.17\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.045\textwidth}p{0.03\textwidth}p{0.03\textwidth}p{0.045\textwidth}p{0.03\textwidth}p{0.03\textwidth}}
   \toprule
@@ -630,17 +630,17 @@ wardsPlaced&                        1.62&    1.76&    $1.85$&    $1.56$&    1.73
 
 \begin{figure*}
 \includegraphics[width=1\textwidth,height=\textheight,keepaspectratio]{radars}
-\caption{Centróides dos \fj{grupos}{perfis} normalizados por métrica de desempenho das equipes.}
+\caption{Centroides dos \fj{grupos}{perfis} normalizados por métrica de desempenho das equipes.}
 \label{fig:radars}
 \end{figure*}
 
-A Figura ~\ref{fig:radars} ilustra os gráficos de radar dos \fj{grupos}{perfis}, onde cada gráfico de radar representa as métricas de desempenho de um \fj{grupo}{perfil}, cada eixo representa uma métrica de desempenho e o comprimento do eixo indica qual a pontuação do \fj{grupo}{perfil} em uma métrica de desempenho específica. As métricas de desempenho usadas para modelar os gráficos de radar são baseadas nos centróides dos \fj{grupos}{perfis} normalizados por característica $normalization(A_j)$, de modo que o comprimento de um eixo seja proporcional em todos os centróides dos \fj{grupos}{perfis} e assuma um valor entre [0, 1].
+A Figura ~\ref{fig:radars} ilustra os gráficos de radar dos \fj{grupos}{perfis}, onde cada gráfico de radar representa as métricas de desempenho de um \fj{grupo}{perfil}, cada eixo representa uma métrica de desempenho e o comprimento do eixo indica qual a pontuação do \fj{grupo}{perfil} em uma métrica de desempenho específica. As métricas de desempenho usadas para modelar os gráficos de radar são baseadas nos centroides dos \fj{grupos}{perfis} normalizados por característica $normalization(A_j)$, de modo que o comprimento de um eixo seja proporcional em todos os centroides dos \fj{grupos}{perfis} e assuma um valor entre [0, 1].
 
 
 Ao observar os resultados, categorizamos os sete \fj{grupos}{perfis} em quatro grandes níveis em termos de taxa de \fj{equipes vencedoras}{vit\'oria}: Fraco, Mais ou Menos, Bom e \textit{Top}. Nos parágrafos seguintes, elaboramos esses resultados ao caracterizar os \fj{grupos}{perfis} de desempenho das equipes para cada categoria.
 
 \subsection{Nível Fraco}
-O \textit{Nível Fraco} consiste do Perfil 1 e do Perfil 4. Esse nível é distinguido por uma taxa de \fj{equipes vencedoras}{vit\'orias} muito baixa, isto \'e $w_r = 10 \%$ (Figura ~\ref{fig:win-plot}). Existem 10 características relevantes para o Perfil 1 e 7 características relevantes para o Perfil 4 (Figura ~\ref{fig:relevance}). Os mais relevantes ordenados por importância são: \textit{neutralMinionsKilledEnemyJungle}, \textit{deaths}, \textit{killingSprees}. A Tabela ~\ref{tab:clusters-very-low} resume as semelhanças e diferenças entre as pontuações das métricas de desempenho para os \fj{grupos}{perfis} desse nível (Figura ~\ref{fig:radars}). As pontuações que mais se diferenciam entre os \fj{grupos}{perfis} são: \textit{magicDamageDealtToMonsters} (moderado para o Perfi 1 e muito baixo para o \fj{Grupo}{Perfil} 4) e \textit{trueDamageTaken} (muito alto para o \fj{Grupo}{Perfil} 1 e o moderado para o \fj{Grupo}{Perfil} 4).
+O \textit{Nível Fraco} consiste do Perfil 1 e do Perfil 4. Esse nível é distinguido por uma taxa de \fj{equipes vencedoras}{vit\'orias} muito baixa, isto \'e $w_r = 10 \%$ (Figura ~\ref{fig:win-plot}). Existem 10 características relevantes para o Perfil 1 e 7 características relevantes para o Perfil 4 (Figura ~\ref{fig:relevance}). Os mais relevantes ordenados por importância são: \textit{neutralMinionsKilledEnemyJungle}, \textit{deaths}, \textit{killingSprees}. A Tabela ~\ref{tab:clusters-very-low} resume as semelhanças e diferenças entre as pontuações das métricas de desempenho para os \fj{grupos}{perfis} desse nível (Figura ~\ref{fig:radars}). As pontuações que mais se diferenciam entre os \fj{grupos}{perfis} são: \textit{magicDamageDealtToMonsters} (moderado para o Perfil 1 e muito baixo para o \fj{Grupo}{Perfil} 4) e \textit{trueDamageTaken} (muito alto para o \fj{Grupo}{Perfil} 1 e o moderado para o \fj{Grupo}{Perfil} 4).
 
 \begin{table}
   \scriptsize
