--- a/main_mestrado.tex
+++ b/main_mestrado.tex
@@ -72,6 +72,10 @@ showstringspaces=false
 \begin{document}
 
 
+% ------ CAPA ------ %
+\input{capa.tex}
+% ------------------ %
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Titulo{Caracterização de Perfis de Comportamento de Equipes em League of Legends}
@@ -84,6 +88,7 @@ showstringspaces=false
 
 \newpage
 \cleardoublepage
+
 
 \PaginadeRosto
 
